# signals

./: .env.example  .env.localstack.example  .gitignore  ARCHITECTURE_OVERVIEW.md  CLAUDE.md  COMPLETE_SETUP_WITH_REDDIT.md  CONTRIBUTING.md  EVERYTHING_YOU_NEED.md  INFRASTRUCTURE_DELIVERY_SUMMARY.md  INFRASTRUCTURE_SETUP_COMPLETE.md  MANUAL_INSTALLATION_STEPS.md  Makefile  QUICK_START.md  README.md  REDDIT_COLLECTOR_INTEGRATION.md  REDDIT_COLLECTOR_STATUS.md  REDDIT_DAILY_PIPELINE.md  RUN_INFRASTRUCTURE_SETUP.sh  SETUP_INFRASTRUCTURE.md  START_HERE.md  companies_with_reddit.json  docker-compose.local.yml  pyproject.toml  reddit_subreddit_mapping.json  ruff.toml  signals
.github/workflows/: ci.yml
config/: account_profiles.csv  account_source_handles.csv  company_twitter_handles.csv  dimension_weights.csv  discovery_blocklist.csv  discovery_thresholds.csv  icp_reference_accounts.csv  icp_signal_playbook.csv  internal_network.csv  keyword_lexicon.csv  profile_scenarios.csv  promotion_policy.csv  research_extraction_prompt.md  research_scoring_prompt.md  seed_accounts.csv  signal_classes.csv  signal_registry.csv  signal_universe_stackrank.csv  source_execution_policy.csv  source_registry.csv  staging.env.example  subreddit_mapping.csv  thresholds.csv  tier_upgrade_rules.csv  watchlist_accounts.csv
data/raw/: community.csv  jobs.csv  (+7 more)
docs/: autonomous_discovery_architecture.md  cloud_release_discipline.md  fork_sales_hybrid_plan.md  plan.md  review-architecture.md  review-code-quality.md  review-comparison-sales-research.md  signals_status_brief.md  team_local_bootstrap.md  watchlist.md
migrations/: 001_initial_schema.sql  002_add_confidence_bands.sql  003_contact_enrichment_and_network.sql
scripts/: backfill_firmographic_signals.py  backup_restore_drill.sh  bootstrap.sh  check_migrations.sh  local_stack_down.sh  local_stack_status.sh  local_stack_up.sh  migrate_sqlite_to_postgres.py  postgres_update_watchlist.sh  refresh_watchlist.sh  rescore_all.py  rollback_promotion_policy.sh  run_daily_live_monitor.sh  run_discovery_daily.sh  run_local_autonomous.sh  test_infra_link.py  test_smallset_autonomous.sh
src/: __init__.py  cli.py  db.py  db_pool.py  http_client.py  logging_config.py  main.py  models.py  notifier.py  promotion_policy.py  server.py  settings.py  source_policy.py  utils.py  warm_path.py
tests/: conftest.py  test_account_detail_dimensions.py  test_apollo.py  test_batch_pipeline.py  test_bombora.py  test_calibration.py  test_cli.py  test_collectors.py  test_contacts_api.py  test_crunchbase.py  test_csv_exporter.py  test_csv_upload.py  test_db.py  test_discovery.py  test_dossier.py  test_email_verify.py  test_enrichment_orchestrator.py  test_enrichment_validation.py  test_g2.py  test_github_mcp_collector.py  test_hackernews_collector.py  test_http_client.py  test_hunt.py  test_icp_playbook.py  test_linkedin_mcp_collector.py  test_local_ui.py  test_models.py  test_new_collectors.py  test_notifier.py  test_output_quality.py  test_pipeline.py  test_promotion_policy.py  test_quality.py  test_research_orchestrator.py  test_research_parser.py  test_research_prompts.py  test_review_import.py  test_sales_ready_export.py  test_scoring.py  test_scoring_dimensions.py  (+14 more)
(+112 files in other folders)
