[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zopdev-signals"
version = "0.1.0"
description = "Local-first buying signal tracker for zop.dev"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0",
  "anthropic>=0.30",
  "openai>=1.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.0",
  "rapidfuzz>=3.9.0",
  "python-dateutil>=2.9.0",
  "tenacity>=9.0.0",
  "pandas>=2.2.0",
  "gspread>=6.1.0",
  "google-auth>=2.34.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "tldextract>=5.1.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "trafilatura>=1.12.0",
  "langdetect>=1.0.9",
  "playwright>=1.52.0",
  "pytest>=8.3.0",
]

[project.optional-dependencies]
hunt_ml = [
  "transformers>=4.48.0",
  "sentencepiece>=0.2.0",
  "torch>=2.7.0",
  "spacy>=3.8.0",
]

[project.scripts]
signals = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
